Fixes spacing and margins in friend request dialog
Fixes #340

--- a/scss/_character_page.scss
+++ b/scss/_character_page.scss
@@ -231,6 +231,7 @@
   align-items: center;
   .date {
     margin-left: 10px;
+    margin-right: 10px;
     flex: 1;
   }
 }
